Add google webmaster tools verification html

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="This is the personal website of Aleksey Nikolsky">
     <meta name="keywords" content="aleksey nikolsky, scientist, composer, biomusicology, classical music">
     <meta name="author" content="www.alekseynikolsky.com">
+    <meta name="google-site-verification" content="Q9k19r9lAkzngV4Ci1TBhxk8-Kxz06y073JjDfwuYsI" />
     <title>Aleksey Nikolsky - Composer, Scientist</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic" rel="stylesheet" type="text/css">
